Bug 424302 - Dates in "All dates" reports title not displayed
Summary: Dates in "All dates" reports title not displayed
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: reports (other bugs)
Version First Reported In: 5.0.8
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-07-16 19:53 UTC by antoine
Modified: 2020-07-19 15:50 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1.1
Sentry Crash Report:


Attachments
screenshot (110.22 KB, image/png)
2020-07-16 19:53 UTC, antoine
Details

Note You need to log in before you can comment on or make changes to this bug.
Description antoine 2020-07-16 19:53:53 UTC
Created attachment 130189 [details]
screenshot

SUMMARY


STEPS TO REPRODUCE
1. Open a report
2. set a "all dates" times interval
3. 

OBSERVED RESULT

In the title, "From To" is displayed, dates are not shown

EXPECTED RESULT

Dates should be displayed

SOFTWARE/OS VERSIONS
Kmymoney 5.0.8
Xubuntu 20.04
Comment 1 Thomas Baumgart 2020-07-19 14:42:55 UTC
Git commit 15947605320186180b3d46924a3720a56063bf85 by Thomas Baumgart.
Committed on 19/07/2020 at 14:42.
Pushed by tbaumgart into branch '5.1'.

Show report start and end date when all data is selected
FIXED-IN: 5.1.1

M  +8    -4    kmymoney/plugins/views/reports/core/reporttable.cpp

https://invent.kde.org/office/kmymoney/commit/15947605320186180b3d46924a3720a56063bf85
Comment 2 Thomas Baumgart 2020-07-19 15:50:23 UTC
Git commit b027e5ddf891ee9a0e13fcda420ac513d144ed50 by Thomas Baumgart.
Committed on 19/07/2020 at 15:49.
Pushed by tbaumgart into branch 'master'.

Show report start and end date when all data is selected

(cherry picked from commit 15947605320186180b3d46924a3720a56063bf85)

M  +8    -4    kmymoney/plugins/views/reports/core/reporttable.cpp

https://invent.kde.org/office/kmymoney/commit/b027e5ddf891ee9a0e13fcda420ac513d144ed50