Show report start and end date when all data is selected

BUG: 424302
FIXED-IN: 5.1.1